@@ -3,6 +3,7 @@ Systre 1.1.6:
   Bug fixes:
     - Archive output was empty with embedding disabled.
 
+- Structure names for RCSR and the zeolite database are reported separately.
 - The .tgs extension (from 2dtiler) is now supported for D-symbol files.
 - RCSR archive is current as of 2009-10-21.
 
